--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 </div>
                 <div class="project-btns">
                     <a class="proj-detail">Demo</a>
-                    <a class="proj-view">Code</a>
+                    <a class="proj-view" href="https://github.com/AyushJha2008/js-mini-project.git">Code</a>
                 </div>
             </div>
 
@@ -126,8 +126,8 @@
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis eveniet iure at deserunt numquam similique!
                 </div>
                 <div class="project-btns">
-                    <a class="proj-detail">Demo</a>
-                    <a class="proj-view">Code</a>
+                    <a class="proj-detail" href="https://www.linkedin.com/posts/ayush-jha200805_html-css-frontend-activity-7337051934362587137-Oi1z?utm_source=share&utm_medium=member_desktop&rcm=ACoAAE5C7EEBC7hIW_VyXuFe50enkBYVkPeUzQ8" >Demo</a>
+                    <a class="proj-view" href="https://github.com/AyushJha2008/js-mini-project.git">Code</a>
                 </div>
             </div>
 
