--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="container" id="about">
         <header class="head">
             <div class="my-logo">
-                <h3 class="logo">Ayush</h3>
-                <button class="theme"><img id="theme-icon" src="assets/sun.png"></button>
+                <button class="theme"><img id="theme-icon" src="assets/moon.png"></button>
+                <h4 class="logo">Ayush</h4>
             </div>
             <nav class="nav">
             <a class="nav-link" href="#about">About</a>
@@ -28,7 +28,7 @@
         <div class="about">
             <div class="myself">                
                 <h1>&lt;Hello/&gt;</h1>
-                <h1>Myself Ayush Jha</h1>
+                <h1>Myself <br> Ayush Jha</h1>
                 <h2>3rd year Computer Engineering Student</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam voluptate quasi veritatis, impedit ea voluptatibus veniam deleniti fugiat fugit ut</p>
                 <a href="https://drive.google.com/file/d/1tJwqUJ9VxyOfslFcXnkPJLu3KeRBOwLQ/view?usp=drivesdk">Check Resume</a>
