--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header class="head">
             <div class="my-logo">
                 <button class="theme"><img id="theme-icon" src="assets/moon.png"></button>
-                <h4 class="logo">Ayush</h4>
+                <a class="logo">Ayush</a>
             </div>
             <nav class="nav">
             <a class="nav-link" href="#about">About</a>
