--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="skill-cont" id="skills">
         <div class="skills">
             <h1 class="skill-head">SKILLS</h1>
-            <span>Here are some of my skills, Which i have been workig for the past 6 months</span>
+            <p>Here are some of my skills, Which i have been workig for the past 6 months</p>
             <div class="skill-secn">               
                 <div class="skill-box">
                     <h1>TECH SKILLS</h1>
@@ -74,7 +74,7 @@
     <div class="project-cont" id="project">
         <div class="project-head">
             <h1>PROJECTS</h1>
-            <span>I have worked on a wide range of projects. Here are some of my projects.</span>
+            <p>I have worked on a wide range of projects. Here are some of my projects.</p>
         </div>
         <div class="project-grid">
             <div class="project-secn">
