--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     <div class="edu-cont" id="education">
         <div class="edu-head">
             <h1>EDUCATION</h1>
-            <span>My education has been a journey of self-discovery and growth. My educational details are as follows.</span>
+            <p>My education has been a journey of self-discovery and growth. My educational details are as follows.</p>
         </div>
         <div class="edu-grid">
             <div class="edu-sec">
@@ -250,7 +250,7 @@
     <div class="event-cont" id="events">
         <div class="event-head">
             <h1>EVENTS</h1>
-            <span>Showcasing memorable tech events I participated this year</span>
+            <p>Showcasing memorable tech events I participated this year</p>
         </div>
         <div class="event-grid">
             <div class="event-slide slide1">
