--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a class="nav-link" href="#education">Education</a>
             <a class="nav-link" href="#events">Events</a>               
             </nav>
-            <a id="github" href="https://github.com/AyushJha2008/AyushJha2008.git">Github</a>
+            <a id="github" href="https://github.com/AyushJha2008/AyushJha2008.git"> <img src="assets/github.png" alt="">Github</a>
         </header>
 
         <div class="about">
@@ -30,7 +30,7 @@
                 <h1>&lt;Hello/&gt;</h1>
                 <h1>Myself <br> Ayush Jha</h1>
                 <h2>3rd year Computer Engineering Student</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam voluptate quasi veritatis, impedit ea voluptatibus veniam deleniti fugiat fugit ut</p>
+                <p>I'm a tech enthusiast with a love for clean code, modern web design, and solving real-world problems through technology. I enjoy turning ideas into Reality.</p>
                 <a href="https://drive.google.com/file/d/1tJwqUJ9VxyOfslFcXnkPJLu3KeRBOwLQ/view?usp=drivesdk">Check Resume</a>
             </div>
            <div class="my-img">
@@ -87,7 +87,7 @@
                     <span>12 Feb 2025</span>
                 </div>
                 <div class="project-desc">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis eveniet iure at deserunt numquam similique!
+                    Traditional Rock paper scissor game made with html, css, js. opponent is bot who makes decision randomly.
                 </div>
                 <div class="project-btns">
                     <a href="https://www.linkedin.com/posts/ayush-jha200805_webdevelopment-html-css-activity-7334949725722296320-66tL?utm_source=share&utm_medium=member_desktop&rcm=ACoAAE5C7EEBC7hIW_VyXuFe50enkBYVkPeUzQ8" class="proj-detail">Demo</a>
@@ -105,7 +105,7 @@
                     <span>18 Feb 2025</span>
                 </div>
                 <div class="project-desc">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis eveniet iure at deserunt numquam similique!
+                    Traditional 2-player OX game, you can play with friend with visual appealing background theme.
                 </div>
                 <div class="project-btns">
                     <a class="proj-detail">Demo</a>
@@ -123,7 +123,7 @@
                     <span>25 Feb 2025</span>
                 </div>
                 <div class="project-desc">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis eveniet iure at deserunt numquam similique!
+                    Level up your memory, find matching cards and finish game with lesser number of turns possible. 
                 </div>
                 <div class="project-btns">
                     <a class="proj-detail" href="https://www.linkedin.com/posts/ayush-jha200805_html-css-frontend-activity-7337051934362587137-Oi1z?utm_source=share&utm_medium=member_desktop&rcm=ACoAAE5C7EEBC7hIW_VyXuFe50enkBYVkPeUzQ8" >Demo</a>
@@ -141,7 +141,7 @@
                     <span>03 May 2025</span>
                 </div>
                 <div class="project-desc">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis eveniet iure at deserunt numquam similique!
+                    WebFlex! A customized Anime streaming Wep app with Login feature inspired by Netflix UI [only frontend]
                 </div>
                 <div class="project-btns">
                     <a class="proj-detail">Demo</a>
@@ -159,7 +159,7 @@
                     <span>25 May 2024</span>
                 </div>
                 <div class="project-desc">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis eveniet iure at deserunt numquam similique!
+                    forecast wep app made with help of React.JS and Weather API which have special button for tracking your area's weather 
                 </div>
                 <div class="project-btns">
                     <a class="proj-detail">Demo</a>
@@ -177,7 +177,7 @@
                     <span>29 May 2024</span>
                 </div>
                 <div class="project-desc">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis eveniet iure at deserunt numquam similique!
+                    Chat bot made with Gemini's API. which can be added in any modern website with little bit customization
                 </div>
                 <div class="project-btns">
                     <a class="proj-detail">Demo</a>
@@ -224,7 +224,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="edu-marks">Grade: 60.4%</div>
+                <div class="edu-marks"><span><b>MHT-CET:</b> 80%tile</span> <span><b>JEE:</b> 72%tile</span></div>
                 <div class="edu-desc">I completed my HSC education at B.N.N college of Arts,Commerce and Science, Thane</div>
             </div>
 
