--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="about">
             <div class="myself">                
                 <h1>&lt;Hello/&gt;</h1>
-                <h1>Myself <br> Ayush Jha</h1>
+                <h1 class="myself-h1">Myself <br> Ayush Jha</h1>
                 <h2>3rd year Computer Engineering Student</h2>
                 <p>I'm a tech enthusiast with a love for clean code, modern web design, and solving real-world problems through technology. I enjoy turning ideas into Reality.</p>
                 <a href="https://drive.google.com/file/d/1tJwqUJ9VxyOfslFcXnkPJLu3KeRBOwLQ/view?usp=drivesdk">Check Resume</a>
@@ -108,7 +108,7 @@
                     Traditional 2-player OX game, you can play with friend with visual appealing background theme.
                 </div>
                 <div class="project-btns">
-                    <a class="proj-detail">Demo</a>
+                    <a class="proj-detail" href="https://www.linkedin.com/posts/ayush-jha200805_webdevelopment-html-css-activity-7333551230700429313-_0mV?utm_source=share&utm_medium=member_desktop&rcm=ACoAAE5C7EEBC7hIW_VyXuFe50enkBYVkPeUzQ8">Demo</a>
                     <a class="proj-view" href="https://github.com/AyushJha2008/js-mini-project.git">Code</a>
                 </div>
             </div>
@@ -144,8 +144,8 @@
                     WebFlex! A customized Anime streaming Wep app with Login feature inspired by Netflix UI [only frontend]
                 </div>
                 <div class="project-btns">
-                    <a class="proj-detail">Demo</a>
-                    <a class="proj-view">Code</a>
+                    <a class="proj-detail" href="https://www.linkedin.com/posts/ayush-jha200805_webdevelopment-react-project-activity-7338477905661808640-GVHO?utm_source=share&utm_medium=member_desktop&rcm=ACoAAE5C7EEBC7hIW_VyXuFe50enkBYVkPeUzQ8" >Demo</a>
+                    <a class="proj-view" href="https://github.com/AyushJha2008/WebFlex__React.git" >Code</a>
                 </div>
             </div>
 
@@ -163,7 +163,7 @@
                 </div>
                 <div class="project-btns">
                     <a class="proj-detail">Demo</a>
-                    <a class="proj-view">Code</a>
+                    <a class="proj-view" href="https://github.com/AyushJha2008/WeatherCast__React.git">Code</a>
                 </div>
             </div>
 
@@ -181,7 +181,7 @@
                 </div>
                 <div class="project-btns">
                     <a class="proj-detail">Demo</a>
-                    <a class="proj-view">Code</a>
+                    <a class="proj-view" href="https://github.com/AyushJha2008/ChatBot__React.git">Code</a>
                 </div>
             </div>
             
@@ -293,10 +293,10 @@
     <footer class="footer-cont">
         <h1>Connect with me</h1>
         <div class="footer-links">
-            <a href="">Linkedin</a>
-            <a href="">Github</a>
-            <a href="">Gmail</a>
-            <a href="">Whatsapp</a>
+            <a href="http://www.linkedin.com/in/ayush-jha200805">Linkedin</a>
+            <a href="https://github.com/AyushJha2008/AyushJha2008.git">Github</a>
+            <a href="mailto:ayushjha@gmail.com">Gmail</a>
+            <a href="https://wa.me/+917517223343" target="_blank">Whatsapp</a>
         </div>
         <div class="footer-secn">
             <span>© 2025 Ayush Jha. All rights reserved.</span>
