--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
             <a class="nav-link" href="#project">Projects</a>
             <a class="nav-link" href="#experience">Experience</a>
             <a class="nav-link" href="#education">Education</a>
-            <a class="nav-link" href="#events">Events</a>               
+            <a class="nav-link" href="#events">Events</a>
             </nav>
             <a id="github" href="https://github.com/AyushJha2008/AyushJha2008.git"> <img src="assets/github.png" alt="">Github</a>
+            <a class="menu"><svg xmlns="http://www.w3.org/2000/svg" height="29px" viewBox="0 -960 960 960" width="29px" fill="#e3e3e3"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a>               
         </header>
 
         <div class="about">
