--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Ayush Jha</title>
     <link rel="stylesheet" href="port.css">
+    <link rel="icon" href="/assets/ayush.jpg" type="image/x-icon">
 </head>
 <body class="dark-theme">
 
@@ -90,7 +91,7 @@
                     Traditional Rock paper scissor game made with html, css, js. opponent is bot who makes decision randomly.
                 </div>
                 <div class="project-btns">
-                    <a href="https://www.linkedin.com/posts/ayush-jha200805_webdevelopment-html-css-activity-7334949725722296320-66tL?utm_source=share&utm_medium=member_desktop&rcm=ACoAAE5C7EEBC7hIW_VyXuFe50enkBYVkPeUzQ8" class="proj-detail">Demo</a>
+                    <a href="https://ayush-game-hub.vercel.app/Stone-Paper-Scissors/sps.html" class="proj-detail">Demo</a>
                     <a href="https://github.com/AyushJha2008/js-mini-project.git" class="proj-view">Code</a>
                 </div>
             </div>
@@ -108,7 +109,7 @@
                     Traditional 2-player OX game, you can play with friend with visual appealing background theme.
                 </div>
                 <div class="project-btns">
-                    <a class="proj-detail" href="https://www.linkedin.com/posts/ayush-jha200805_webdevelopment-html-css-activity-7333551230700429313-_0mV?utm_source=share&utm_medium=member_desktop&rcm=ACoAAE5C7EEBC7hIW_VyXuFe50enkBYVkPeUzQ8">Demo</a>
+                    <a class="proj-detail" href="https://ayush-game-hub.vercel.app/tic-tac-toe/tictac.html">Demo</a>
                     <a class="proj-view" href="https://github.com/AyushJha2008/js-mini-project.git">Code</a>
                 </div>
             </div>
@@ -126,7 +127,7 @@
                     Level up your memory, find matching cards and finish game with lesser number of turns possible. 
                 </div>
                 <div class="project-btns">
-                    <a class="proj-detail" href="https://www.linkedin.com/posts/ayush-jha200805_html-css-frontend-activity-7337051934362587137-Oi1z?utm_source=share&utm_medium=member_desktop&rcm=ACoAAE5C7EEBC7hIW_VyXuFe50enkBYVkPeUzQ8" >Demo</a>
+                    <a class="proj-detail" href="https://ayush-game-hub.vercel.app/memory%20game/memory.html" >Demo</a>
                     <a class="proj-view" href="https://github.com/AyushJha2008/js-mini-project.git">Code</a>
                 </div>
             </div>
