--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="myself">                
                 <h1>&lt;Hello/&gt;</h1>
                 <h1 class="myself-h1">Myself <br> Ayush Jha</h1>
-                <h2>3rd year Computer Engineering Student</h2>
+                <h2>3rd year C.E. undergrduate</h2>
                 <p>I'm a tech enthusiast with a love for clean code, modern web design, and solving real-world problems through technology. I enjoy turning ideas into Reality.</p>
                 <a href="https://drive.google.com/file/d/1tJwqUJ9VxyOfslFcXnkPJLu3KeRBOwLQ/view?usp=drivesdk">Check Resume</a>
             </div>
