--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <h1 class="myself-h1">Myself <br> Ayush Jha</h1>
                 <h2>3rd year C.E. undergrduate</h2>
                 <p>I'm a tech enthusiast with a love for clean code, modern web design, and solving real-world problems through technology. I enjoy turning ideas into Reality.</p>
-                <a href="https://drive.google.com/file/d/1tJwqUJ9VxyOfslFcXnkPJLu3KeRBOwLQ/view?usp=drivesdk">Check Resume</a>
+                <a href="https://drive.google.com/file/d/1p62X72ZM1LugRzKnzj8awVw0gQ-FmXOQ/view?usp=sharing">Check Resume</a>
             </div>
            <div class="my-img">
             <img src="assets/ayush.jpg" alt="Ayush">
