--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
             <div class="myself" >                
                 <h1>&lt;Hello/&gt;</h1>
                 <h1 class="myself-h1">Myself <br> Ayush Jha</h1>
-                <h2>3rd year C.E. undergrduate</h2>
+                <div class="role">
+                    <div class="role-in">A</div>
+                    <div id="typing" class="typing-container"></div>
+                </div>
                 <p>I'm a tech enthusiast with a love for clean code, modern web design, and solving real-world problems through technology. I enjoy turning ideas into Reality.</p>
                 <a href="https://drive.google.com/file/d/1p62X72ZM1LugRzKnzj8awVw0gQ-FmXOQ/view?usp=sharing">Check Resume</a>
             </div>
