resize some cont

--- a/index.html
+++ b/index.html
@@ -295,6 +295,16 @@
         </div>
     </div>
 
+    <!-- <div class="exp-cont">
+        <div class="exp-head">
+            <h1>Experience</h1>
+            <p>Here's a my journey of learning and growing with my past Associates as i intern or freelancer</p>
+        </div>
+        <div class="exp-grid">
+
+        </div>
+    </div> -->
+
     <footer class="footer-cont">
         <h1>Connect with me</h1>
         <div class="footer-links">
