--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Ayush Jha</title>
     <link rel="stylesheet" href="port.css">
     <link rel="icon" href="/assets/ayush.jpg" type="image/x-icon">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
 </head>
 <body class="dark-theme">
 
@@ -42,6 +44,7 @@
             <img src="assets/ayush.jpg" alt="Ayush">
            </div>
         </div>
+
     </div>
 
     <div class="skill-cont" id="skills">
