--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
 </head>
 <body class="dark-theme">
-
     <div class="container" id="about">
         <header class="head">
             <div class="my-logo">
@@ -45,7 +44,7 @@
            </div>
         </div>
 
-    </div>
+    </div> <script src="vanta.net.min.js"></script>
 
     <div class="skill-cont" id="skills">
         <div class="skills">
@@ -195,6 +194,7 @@
             
         </div>
     </div>
+
 
     <div class="edu-cont" id="education">
         <div class="edu-head">
