--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="port.css">
     <link rel="icon" href="/assets/ayush.jpg" type="image/x-icon">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.waves.min.js"></script>
 </head>
 <body class="dark-theme">
     <div class="container" id="about">
@@ -36,7 +36,7 @@
                     <div class="role-in">A</div>
                     <div id="typing" class="typing-container"></div>
                 </div>
-                <p>I'm a tech enthusiast with a love for clean code, modern web design, and solving real-world problems through technology. I enjoy turning ideas into Reality.</p>
+                <p>Bitten by a radioactive bug, now I debug for a living. Just your friendly neighborhood developer—if your site’s guilty of unsatisfied customer, Better Call Me!</p>
                 <a href="https://drive.google.com/file/d/1p62X72ZM1LugRzKnzj8awVw0gQ-FmXOQ/view?usp=sharing">Check Resume</a>
             </div>
            <div class="my-img">
@@ -44,34 +44,34 @@
            </div>
         </div>
 
-    </div> <script src="vanta.net.min.js"></script>
+    </div>
 
     <div class="skill-cont" id="skills">
         <div class="skills">
             <h1 class="skill-head">SKILLS</h1>
             <p>Here are some of my skills, Which i have been workig for the past 6 months</p>
-            <div class="skill-secn">               
+            <div class="skill-secn box hidden">               
                 <div class="skill-box">
                     <h1>TECH SKILLS</h1>
-                    <div class="skill-grid">
-                        <div class="skill-item"><img src="assets/html.png"><span>HTML</span></div>
-                        <div class="skill-item"><img src="assets/css.png"><span>CSS</span></div>
-                        <div class="skill-item"><img src="assets/javascript.png"><span>Javascript</span></div>
-                        <div class="skill-item"><img src="assets/react.png"><span>React</span></div>
-                        <div class="skill-item"><img src="assets/git.png"><span>Git</span></div>
-                        <div class="skill-item"><img src="assets/github.png"><span>Github</span></div>
-                        <div class="skill-item"><img src="assets/api.png"><span>API handling</span></div>
-                        <div class="skill-item"><img src="assets/vscode.png"><span>VS code</span></div>
+                    <div class="skill-grid box hidden">
+                        <div class="skill-item box hidden"><img src="assets/html.png"><span>HTML</span></div>
+                        <div class="skill-item box hidden"><img src="assets/css.png"><span>CSS</span></div>
+                        <div class="skill-item box hidden"><img src="assets/javascript.png"><span>Javascript</span></div>
+                        <div class="skill-item box hidden"><img src="assets/react.png"><span>React</span></div>
+                        <div class="skill-item box hidden"><img src="assets/git.png"><span>Git</span></div>
+                        <div class="skill-item box hidden"><img src="assets/github.png"><span>Github</span></div>
+                        <div class="skill-item box hidden"><img src="assets/api.png"><span>API handling</span></div>
+                        <div class="skill-item box hidden"><img src="assets/vscode.png"><span>VS code</span></div>
                     </div>                                                                                                                 
                 </div>
 
                 <div class="skill-box">
                     <h1>OTHER SKILLS</h1>
                     <div class="skill-grid other-skill">
-                        <div class="skill-item"><img src="./assets/time.png"><span>Time management</span></div>
-                        <div class="skill-item"><img src="./assets/problem.png"><span>Problem Solving</span></div>
-                        <div class="skill-item"><img src="./assets/leader.png"><span>Leadership</span></div>
-                        <div class="skill-item"><img src="./assets/decision.png"><span>Decision Making</span></div>
+                        <div class="skill-item box hidden"><img src="./assets/time.png"><span>Time management</span></div>
+                        <div class="skill-item box hidden"><img src="./assets/problem.png"><span>Problem Solving</span></div>
+                        <div class="skill-item box hidden"><img src="./assets/leader.png"><span>Leadership</span></div>
+                        <div class="skill-item box hidden"><img src="./assets/decision.png"><span>Decision Making</span></div>
                     </div>                
                 </div>
             </div>
@@ -79,13 +79,13 @@
     </div>
 
     <div class="project-cont" id="project">
-        <div class="project-head">
+        <div class="project-head box hidden">
             <h1>PROJECTS</h1>
             <p>I have worked on a wide range of projects. Here are some of my projects.</p>
         </div>
-        <div class="project-grid">
-            <div class="project-secn">
-                <div class="output-secn"><img src="./assets/output1.png" alt=""></div>
+        <div class="project-grid box hidden">
+            <div class="project-secn box hidden">
+                <div class="output-secn"><img loading="lazy" src="./assets/output1.png" alt=""></div>
                 <div class="language">
                     <span>HTML</span> <span>CSS</span> <span>Javascript</span>
                 </div>
@@ -102,8 +102,8 @@
                 </div>
             </div>
 
-            <div class="project-secn">
-                <div class="output-secn"><img src="./assets/output2.png" alt=""></div>
+            <div class="project-secn box hidden">
+                <div class="output-secn"><img src="./assets/output2.png" loading="lazy" alt=""></div>
                 <div class="language">
                     <span>HTML</span> <span>CSS</span> <span>Javascript</span>
                 </div>
@@ -120,8 +120,8 @@
                 </div>
             </div>
 
-            <div class="project-secn">
-                <div class="output-secn"><img src="./assets/output3.png" alt=""></div>
+            <div class="project-secn box hidden">
+                <div class="output-secn"><img loading="lazy" src="./assets/output3.png" alt=""></div>
                 <div class="language">
                     <span>HTML</span> <span>CSS</span> <span>Javascript</span>
                 </div>
@@ -138,8 +138,8 @@
                 </div>
             </div>
 
-            <div class="project-secn">
-                <div class="output-secn"><img src="./assets/output4.png" alt=""></div>
+            <div class="project-secn box hidden">
+                <div class="output-secn"><img loading="lazy" src="./assets/output4.png" alt=""></div>
                 <div class="language">
                     <span>ReactJS</span> <span>CSS</span> <span>API</span>
                 </div>
@@ -156,8 +156,8 @@
                 </div>
             </div>
 
-            <div class="project-secn">
-                <div class="output-secn"><img src="./assets/output5.png" alt=""></div>
+            <div class="project-secn box hidden">
+                <div class="output-secn"><img loading="lazy" src="./assets/output5.png" alt=""></div>
                 <div class="language">
                     <span>ReactJS</span> <span>CSS</span> <span>API</span>
                 </div>
@@ -174,8 +174,8 @@
                 </div>
             </div>
 
-            <div class="project-secn">
-                <div class="output-secn"><img src="./assets/output6.png" alt=""></div>
+            <div class="project-secn box hidden">
+                <div class="output-secn"><img loading="lazy" src="./assets/output6.png" alt=""></div>
                 <div class="language">
                     <span>ReactJS</span> <span>CSS</span> <span>API</span>
                 </div>
@@ -195,14 +195,13 @@
         </div>
     </div>
 
-
     <div class="edu-cont" id="education">
-        <div class="edu-head">
+        <div class="edu-head box hidden">
             <h1>EDUCATION</h1>
             <p>My education has been a journey of self-discovery and growth. My educational details are as follows.</p>
         </div>
-        <div class="edu-grid">
-            <div class="edu-sec">
+        <div class="edu-grid box hidden">
+            <div class="edu-sec box hidden">
                 <div class="edu-place">
                     <div class="edu-logo">
                         <img src="./assets/edu1.jpeg" alt="">
@@ -219,7 +218,7 @@
                 <div class="edu-desc">I am currently pursuing a Bachelor's degree in Computer Science and Engineering at Universal College Of Engineering,Kaman. I have completed 5 semesters. I have taken courses in Data Structures, Algorithms, Object-Oriented Programming, Database Management Systems, Operating Systems, and Computer Networks, among others.</div>
             </div>
 
-            <div class="edu-sec">
+            <div class="edu-sec box hidden">
                 <div class="edu-place">
                     <div class="edu-logo">
                         <img src="./assets/edu2.jpeg" alt="">
@@ -236,7 +235,7 @@
                 <div class="edu-desc">I completed my HSC education at B.N.N college of Arts,Commerce and Science, Thane</div>
             </div>
 
-            <div class="edu-sec">
+            <div class="edu-sec box hidden">
                 <div class="edu-place">
                     <div class="edu-logo">
                         <img src="./assets/edu3.jpeg" alt="">
@@ -256,44 +255,48 @@
     </div>
 
     <div class="event-cont" id="events">
-        <div class="event-head">
+        <div class="event-head box hidden">
             <h1>EVENTS</h1>
             <p>Showcasing memorable tech events I participated this year</p>
         </div>
-        <div class="event-grid">
+        <div class="event-grid box hidden">
             <div class="event-slide slide1">
-                <img src="assets/event1.jpg" alt="">
-                <img src="assets/event2.jpg" alt="">
-                <img src="assets/event3.jpg" alt="">
-                <img src="assets/event4.jpg" alt="">
-                <img src="assets/event5.jpg" alt="">
-                <img src="assets/event6.jpg" alt="">
-                <img src="assets/event7.jpg" alt="">
+                <img src="assets/event3.jpg" loading="lazy" alt="Coherence hackathon id-card">
+                <img src="assets/event1.jpg" loading="lazy" alt="Flutter workshop">
+                <img src="assets/event5.jpg" loading="lazy" alt="Coherence Hackathon team card">
+                <img src="assets/event2.jpg" loading="lazy" alt="Flutter workshop certificate">
+                <img src="assets/event4.jpg" loading="lazy" alt="Coherence hackathon team">
+                <img src="assets/event7.jpg" loading="lazy" alt="coherence hackathon myID">
+                <img src="assets/event8.jpg" loading="lazy" alt="Eonverse hackathon certificate">
+                <img src="assets/event6.jpg" loading="lazy" alt="coherence hackathon certificate">
                 <!-- duplicate -->
-                <img src="assets/event1.jpg" alt="">
-                <img src="assets/event2.jpg" alt="">
-                <img src="assets/event3.jpg" alt="">
-                <img src="assets/event4.jpg" alt="">
-                <img src="assets/event5.jpg" alt="">
-                <img src="assets/event6.jpg" alt="">
-                <img src="assets/event7.jpg" alt="">
+                <img src="assets/event3.jpg" loading="lazy" alt="Coherence hackathon id-card">
+                <img src="assets/event1.jpg" loading="lazy" alt="Flutter workshop">
+                <img src="assets/event5.jpg" loading="lazy" alt="Coherence Hackathon team card">
+                <img src="assets/event2.jpg" loading="lazy" alt="Flutter workshop certificate">
+                <img src="assets/event4.jpg" loading="lazy" alt="Coherence hackathon team">
+                <img src="assets/event7.jpg" loading="lazy" alt="coherence hackathon myID">
+                <img src="assets/event8.jpg" loading="lazy" alt="Eonverse hackathon certificate">
+                <img src="assets/event6.jpg" loading="lazy" alt="coherence hackathon certificate">
             </div>
             <div class="event-slide slide2">
-                <img src="assets/event7.jpg" alt="">
-                <img src="assets/event6.jpg" alt="">
-                <img src="assets/event5.jpg" alt="">
-                <img src="assets/event4.jpg" alt="">
-                <img src="assets/event3.jpg" alt="">
-                <img src="assets/event2.jpg" alt="">
-                <img src="assets/event1.jpg" alt="">
+                <img src="assets/event6.jpg" loading="lazy" alt="coherence hackathon certificate">
+                <img src="assets/event8.jpg" loading="lazy" alt="Eonverse hackathon certificate">
+                <img src="assets/event7.jpg" loading="lazy" alt="coherence hackathon myID">
+                <img src="assets/event4.jpg" loading="lazy" alt="Coherence hackathon team">
+                <img src="assets/event2.jpg" loading="lazy" alt="Flutter workshop certificate">
+                <img src="assets/event5.jpg" loading="lazy" alt="Coherence Hackathon team card">
+                <img src="assets/event1.jpg" loading="lazy" alt="Flutter workshop">
+                <img src="assets/event3.jpg" loading="lazy" alt="Coherence hackathon id-card">
                 <!-- duplicate -->
-                <img src="assets/event7.jpg" alt="">
-                <img src="assets/event6.jpg" alt="">
-                <img src="assets/event5.jpg" alt="">
-                <img src="assets/event4.jpg" alt="">
-                <img src="assets/event3.jpg" alt="">
-                <img src="assets/event2.jpg" alt="">
-                <img src="assets/event1.jpg" alt="">
+                <img src="assets/event6.jpg" loading="lazy" alt="coherence hackathon certificate">
+                <img src="assets/event8.jpg" loading="lazy" alt="Eonverse hackathon certificate">
+                <img src="assets/event7.jpg" loading="lazy" alt="coherence hackathon myID">
+                <img src="assets/event4.jpg" loading="lazy" alt="Coherence hackathon team">
+                <img src="assets/event2.jpg" loading="lazy" alt="Flutter workshop certificate">
+                <img src="assets/event5.jpg" loading="lazy" alt="Coherence Hackathon team card">
+                <img src="assets/event1.jpg" loading="lazy" alt="Flutter workshop">
+                <img src="assets/event3.jpg" loading="lazy" alt="Coherence hackathon id-card">
             </div>
         </div>
     </div>
