--- a/index.html
+++ b/index.html
@@ -58,20 +58,21 @@
                         <div class="skill-item box hidden"><img src="assets/css.png"><span>CSS</span></div>
                         <div class="skill-item box hidden"><img src="assets/javascript.png"><span>Javascript</span></div>
                         <div class="skill-item box hidden"><img src="assets/react.png"><span>React</span></div>
-                        <div class="skill-item box hidden"><img src="assets/git.png"><span>Git</span></div>
-                        <div class="skill-item box hidden"><img src="assets/github.png"><span>Github</span></div>
-                        <div class="skill-item box hidden"><img src="assets/api.png"><span>API handling</span></div>
-                        <div class="skill-item box hidden"><img src="assets/vscode.png"><span>VS code</span></div>
+                        <div class="skill-item box hidden"><img src="assets/typescript.png"><span>Typescript</span></div>
+                        <div class="skill-item box hidden"><img src="assets/mongodb.png"><span>MongoDB</span></div>
+                        <div class="skill-item box hidden"><img src="assets/express.png"><span>Express</span></div>
+                        <div class="skill-item box hidden"><img src="assets/node.png"><span>Node</span></div>
+                                             
                     </div>                                                                                                                 
                 </div>
 
                 <div class="skill-box">
-                    <h1>OTHER SKILLS</h1>
+                    <h1>Tools</h1>
                     <div class="skill-grid other-skill">
-                        <div class="skill-item box hidden"><img src="./assets/time.png"><span>Time management</span></div>
-                        <div class="skill-item box hidden"><img src="./assets/problem.png"><span>Problem Solving</span></div>
-                        <div class="skill-item box hidden"><img src="./assets/leader.png"><span>Leadership</span></div>
-                        <div class="skill-item box hidden"><img src="./assets/decision.png"><span>Decision Making</span></div>
+                        <div class="skill-item box hidden"><img src="assets/git.png"><span>Git</span></div>
+                        <div class="skill-item box hidden"><img src="assets/github.png"><span>Github</span></div>
+                        <div class="skill-item box hidden"><img src="assets/api.png"><span>API</span></div>
+                        <div class="skill-item box hidden"><img src="assets/postman.png"><span>Postman</span></div>
                     </div>                
                 </div>
             </div>
@@ -163,7 +164,7 @@
                 </div>
                 <div class="project-name">
                     <p>WeatherCast</p>
-                    <span>25 May 2024</span>
+                    <span>25 May 2025</span>
                 </div>
                 <div class="project-desc">
                     forecast wep app made with help of React.JS and Weather API which have special button for tracking your area's weather 
@@ -181,10 +182,28 @@
                 </div>
                 <div class="project-name">
                     <p>ChatBot</p>
-                    <span>29 May 2024</span>
+                    <span>29 May 2025</span>
                 </div>
                 <div class="project-desc">
                     Chat bot made with Gemini's API. which can be added in any modern website with little bit customization
+                </div>
+                <div class="project-btns">
+                    <a class="proj-detail">Demo</a>
+                    <a class="proj-view" href="https://github.com/AyushJha2008/ChatBot__React.git">Code</a>
+                </div>
+            </div>
+
+            <div class="project-secn box hidden">
+                <div class="output-secn"><img loading="lazy" src="./assets/output7.png" alt=""></div>
+                <div class="language">
+                    <span>ReactJS</span> <span>CSS</span> <span>API</span>
+                </div>
+                <div class="project-name">
+                    <p>Product Viewer</p>
+                    <span>09 Juyl 2025</span>
+                </div>
+                <div class="project-desc">
+                    Frontend of E-commerce Website with login, product detail and home page made with Dummy JSON Product API
                 </div>
                 <div class="project-btns">
                     <a class="proj-detail">Demo</a>
