--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <a class="nav-link" href="#project">Projects</a>
             <a class="nav-link" href="#education">Education</a>
             <a class="nav-link" href="#events">Events</a>
-            <a class="nav-link github2" href="https://github.com/AyushJha2008/AyushJha2008.git">Github</a>
+            <a class="nav-link github2" href="https://github.com/AyushJha2008">Github</a>
             </nav>
-            <a id="github" href="https://github.com/AyushJha2008/AyushJha2008.git"> <img src="assets/github.png" alt="">Github</a>
+            <a id="github" href="https://github.com/AyushJha2008"> <img src="assets/github.png" alt="">Github</a>
             <a class="menu"><svg xmlns="http://www.w3.org/2000/svg" height="29px" viewBox="0 -960 960 960" width="29px" fill="#e3e3e3"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a>               
         </header>
 
@@ -94,12 +94,14 @@
                     <p>Rk Ppr Scr</p>
                     <span>12 Feb 2025</span>
                 </div>
+                <div class="hide-project">
                 <div class="project-desc">
                     Traditional Rock paper scissor game made with html, css, js. opponent is bot who makes decision randomly.
                 </div>
                 <div class="project-btns">
                     <a href="https://ayush-game-hub.vercel.app/Stone-Paper-Scissors/sps.html" class="proj-detail">Demo</a>
                     <a href="https://github.com/AyushJha2008/js-mini-project.git" class="proj-view">Code</a>
+                </div>
                 </div>
             </div>
 
@@ -112,12 +114,14 @@
                     <p>Tic Tac Toe</p>
                     <span>18 Feb 2025</span>
                 </div>
+                <div class="hide-project">
                 <div class="project-desc">
                     Traditional 2-player OX game, you can play with friend with visual appealing background theme.
                 </div>
                 <div class="project-btns">
                     <a class="proj-detail" href="https://ayush-game-hub.vercel.app/tic-tac-toe/tictac.html">Demo</a>
                     <a class="proj-view" href="https://github.com/AyushJha2008/js-mini-project.git">Code</a>
+                </div>
                 </div>
             </div>
 
@@ -130,12 +134,14 @@
                     <p>Memory</p>
                     <span>25 Feb 2025</span>
                 </div>
+                <div class="hide-project">
                 <div class="project-desc">
                     Level up your memory, find matching cards and finish game with lesser number of turns possible. 
                 </div>
                 <div class="project-btns">
                     <a class="proj-detail" href="https://ayush-game-hub.vercel.app/memory%20game/memory.html" >Demo</a>
                     <a class="proj-view" href="https://github.com/AyushJha2008/js-mini-project.git">Code</a>
+                </div>
                 </div>
             </div>
 
@@ -148,12 +154,14 @@
                     <p>WebFlex</p>
                     <span>03 May 2025</span>
                 </div>
+                <div class="hide-project">
                 <div class="project-desc">
                     WebFlex! A customized Anime streaming Wep app with Login feature inspired by Netflix UI [only frontend]
                 </div>
                 <div class="project-btns">
                     <a class="proj-detail" href="https://www.linkedin.com/posts/ayush-jha200805_webdevelopment-react-project-activity-7338477905661808640-GVHO?utm_source=share&utm_medium=member_desktop&rcm=ACoAAE5C7EEBC7hIW_VyXuFe50enkBYVkPeUzQ8" >Demo</a>
                     <a class="proj-view" href="https://github.com/AyushJha2008/WebFlex__React.git" >Code</a>
+                </div>
                 </div>
             </div>
 
@@ -166,12 +174,14 @@
                     <p>WeatherCast</p>
                     <span>25 May 2025</span>
                 </div>
+                <div class="hide-project">
                 <div class="project-desc">
                     forecast wep app made with help of React.JS and Weather API which have special button for tracking your area's weather 
                 </div>
                 <div class="project-btns">
                     <a class="proj-detail">Demo</a>
                     <a class="proj-view" href="https://github.com/AyushJha2008/WeatherCast__React.git">Code</a>
+                </div>
                 </div>
             </div>
 
@@ -184,12 +194,14 @@
                     <p>ChatBot</p>
                     <span>29 May 2025</span>
                 </div>
+                <div class="hide-project">
                 <div class="project-desc">
                     Chat bot made with Gemini's API. which can be added in any modern website with little bit customization
                 </div>
                 <div class="project-btns">
                     <a class="proj-detail">Demo</a>
                     <a class="proj-view" href="https://github.com/AyushJha2008/ChatBot__React.git">Code</a>
+                </div>
                 </div>
             </div>
 
@@ -202,12 +214,14 @@
                     <p>Product Viewer</p>
                     <span>09 Juyl 2025</span>
                 </div>
+                <div class="hide-project">
                 <div class="project-desc">
                     Frontend of E-commerce Website with login, product detail and home page made with Dummy JSON Product API
                 </div>
                 <div class="project-btns">
                     <a class="proj-detail">Demo</a>
-                    <a class="proj-view" href="https://github.com/AyushJha2008/ChatBot__React.git">Code</a>
+                    <a class="proj-view" href="https://github.com/AyushJha2008/ProductViewer__React.git">Code</a>
+                </div>
                 </div>
             </div>
             
