cancel button in project

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         <header class="head">
             <div class="my-logo">
                 <button class="theme"><img id="theme-icon" src="assets/moon.png"></button>
-                <a class="logo">Ayush</a>
             </div>
             <nav class="nav">
             <a class="nav-link" href="#about">About</a>
@@ -85,7 +84,9 @@
             <p>I have worked on a wide range of projects. Here are some of my projects.</p>
         </div>
         <div class="project-grid box hidden">
+
             <div class="project-secn box hidden">
+                <div class="project-cancel"> <span>x</span></div>
                 <div class="output-secn"><img loading="lazy" src="./assets/output1.png" alt=""></div>
                 <div class="language">
                     <span>HTML</span> <span>CSS</span> <span>Javascript</span>
@@ -106,6 +107,7 @@
             </div>
 
             <div class="project-secn box hidden">
+                <div class="project-cancel"> <span>x</span></div>
                 <div class="output-secn"><img src="./assets/output2.png" loading="lazy" alt=""></div>
                 <div class="language">
                     <span>HTML</span> <span>CSS</span> <span>Javascript</span>
@@ -126,6 +128,7 @@
             </div>
 
             <div class="project-secn box hidden">
+                <div class="project-cancel"> <span>x</span></div>
                 <div class="output-secn"><img loading="lazy" src="./assets/output3.png" alt=""></div>
                 <div class="language">
                     <span>HTML</span> <span>CSS</span> <span>Javascript</span>
@@ -146,6 +149,7 @@
             </div>
 
             <div class="project-secn box hidden">
+                <div class="project-cancel"> <span>x</span></div>
                 <div class="output-secn"><img loading="lazy" src="./assets/output4.png" alt=""></div>
                 <div class="language">
                     <span>ReactJS</span> <span>CSS</span> <span>API</span>
@@ -166,6 +170,7 @@
             </div>
 
             <div class="project-secn box hidden">
+                <div class="project-cancel"> <span>x</span></div>
                 <div class="output-secn"><img loading="lazy" src="./assets/output5.png" alt=""></div>
                 <div class="language">
                     <span>ReactJS</span> <span>CSS</span> <span>API</span>
@@ -186,6 +191,7 @@
             </div>
 
             <div class="project-secn box hidden">
+                <div class="project-cancel"> <span>x</span></div>
                 <div class="output-secn"><img loading="lazy" src="./assets/output6.png" alt=""></div>
                 <div class="language">
                     <span>ReactJS</span> <span>CSS</span> <span>API</span>
@@ -206,6 +212,7 @@
             </div>
 
             <div class="project-secn box hidden">
+                <div class="project-cancel"> <span>x</span></div>
                 <div class="output-secn"><img loading="lazy" src="./assets/output7.png" alt=""></div>
                 <div class="language">
                     <span>ReactJS</span> <span>CSS</span> <span>API</span>
